--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar Section -->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo"> <img src="/images/WOW.png" class="WOW"> </a>
+            <a href="#home" id="navbar__logo"> <img src="/images/WOW.png" class="WOW"> </a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -21,16 +21,16 @@
 
             <ul class="navbar__menu">
                 <li class="navbar_item">
-                    <a href="/" class="navbar__links"> Home </a>
+                    <a href="/" class="navbar__links" id="home-page"> Home </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/tech" class="navbar__links"> Tech </a>
+                    <a href="/About" class="navbar__links"> About </a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/" class="navbar__links"> Products </a>
+                    <a href="/" class="navbar__links"> Windows's </a>
                 </li>
                 <li class="navbar_btn">
-                    <a href="/" class="button"> Sign up </a>
+                    <a href="" class="button" id="Windows"> Windows's </a>
                 </li>
             </ul>
         </div>
@@ -50,20 +50,81 @@
             </div>
         </div>
     </div>
+
+
     <!-- Services Section -->
     <div class="services">
         <h1>See what the hype is about</h1>
-        <div class="services__container">
+        <div class="services__wrapper">
             <div class="services__card">
-                <h2>Experience Bliss</h2>
-                <p>AI Powered Technology</p>
+                <h2>ReviOS</h2>
+                <p>For New Users</p>
+                <div class="services__btn"><button>Lets Start!</button></div>
             </div>
             <div class="services__card">
-                <h2>Are you ready?</h2>
-                <p>Take the leap</p>
+                <h2>GGOS</h2>
+                <p>For Advanced Users</p>
+                <div class="services__btn"><button>Lets Go!</button></div>
+            </div>
+            <!-- <div class="services__card">
+                <h2>AtlasOS</h2>
+                <p>For More Advanced Users</p>
+                <div class="services__btn"><button>Lets Go!</button></div>
+            </div>
+            <div class="services__card">
+                <h2>FoxOS</h2>
+                <p>For Highest Advanced Users</p>
+                <div class="services__btn"><button>Lets Go!</button></div>
+            </div> -->
+        </div>
+    </div>
+
+    <!-- Footer Section -->
+    <div class="footer__container">
+        <div class="footer__links">
+            <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <h2>About US</h2>
+                    <a href="/">How we test</a>
+                    <a href="/">Pros and Cons</a>
+                    <a href="/">Terms of Service</a>
+                </div>
+                <div class="footer__link--items">
+                    <h2>Social Media</h2>
+                    <a href="https://discord.io/WorldOfWindows"><ion-icon name="logo-twitter"></ion-icon>Youtube</a>
+                    <a href="/"><ion-icon name="logo-twitter"></ion-icon>Twitter</a>
+                    <a href="/"><ion-icon name="logo-discord"></ion-icon>Discord</a>
+                    <a href="/">Revolt</a>
+                    <a href="/">Terms of Service</a>
+                </div>
+            </div>
+            <!-- <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <h2>About US</h2>
+                    <a href="/">How we test</a>
+                    <a href="/">Pros and Cons</a>
+                    <a href="/">Terms of Service</a>
+                </div>
+                <div class="footer__link--items">
+                    <h2>About US</h2>
+                    <a href="/">How it works</a>
+                    <a href="/">Testimonals</a>
+                    <a href="/">Careers</a>
+                    <a href="/">Investments</a>
+                    <a href="/">Terms of Service</a>
+                </div>
+            </div> -->
+        </div>
+        <div class="social__media">
+            <div class="social__media--wrap">
+                <div class="footer__logo">
+                    <a href="/" id="footer__logo"></a>
+                </div>
             </div>
         </div>
     </div>
-    <script src="app.js"></script>
+<script src="app.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
