--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
         <div class="footer__links">
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
-                    <h2>About US</h2>
+                    <h2>About</h2>
                     <a href="/">How we test</a>
                     <a href="/">Pros and Cons</a>
-                    <a href="/">Terms of Service</a>
+                    <a href="/"><ion-icon name="document"></ion-icon></a>
                 </div>
                 <div class="footer__link--items">
-                    <h2>Social Media</h2>
-                    <a href="https://discord.io/WorldOfWindows"><ion-icon name="logo-twitter"></ion-icon>Youtube</a>
-                    <a href="/"><ion-icon name="logo-twitter"></ion-icon>Twitter</a>
-                    <a href="/"><ion-icon name="logo-discord"></ion-icon>Discord</a>
-                    <a href="/">Revolt</a>
-                    <a href="/">Terms of Service</a>
+                    <div class="footer__social">
+                        <h2>Social Media</h2>
+                        <a href="https://discord.io/WorldOfWindows" target="_blank"><ion-icon name="logo-discord"><</a>
+                        <a href="https://www.youtube.com/@world-of-windows" target="_blank"><ion-icon name="logo-youtube"></a>
+                        <a href="https://twitter.com/World_OfWindows" target="_blank"><ion-icon name="logo-twitter"></a>
+                    </div>
                 </div>
             </div>
             <!-- <div class="footer__link--wrapper">
